# public

./: .bumpversion.toml  .env  .envrc  .gitattributes  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  authorized_keys  config.toml  foo.py  install.py  justfile  main.yml  pyproject.toml  pyrightconfig.json  ruff.toml  set-up-local.sh  set-up-remote.sh  set-up.sh  shell.sh  starship.sh  starship.toml
.github/workflows/: pull-request.yml  push.yaml  push.yml
configs/: .bashrc  .tmux.conf  authorized-keys-vc.txt  authorized_keys  authorized_keys_vm  direnv.toml  git-config  github-infra-mirror  github-settings-mirror  gitlab-full  gitlab-infra  resolv.conf  shell.sh  ssh-default  ssh-github-infra-mirror  ssh-gitlab-infra  ssh-gitlab-qrt  sshd_config  starship.toml  storage.cfg  subnet.sh  tailscale.yml  tmux.conf.local
configs/tailscale/: docker-compose.yml
installer/: install.py  rsync-to-test.sh
neovim/: init.lua  lazyvim.json
neovim/lua/: config
neovim/lua/plugins/: auto-save.nvim.lua
public/: __init__.py  install.py
repo/direnv/: .envrc
repo/docker/: Dockerfile  docker-compose.yml
repo/env/: .env
repo/git/: .gitignore  .gitmodules
repo/gitlab/: .gitlab-ci.yml
repo/ignore/: .ignore
repo/just/: justfile
repo/pre-commit/: .pre-commit-config.yaml  update.sh
repo/pyright/: base.json  pyrightconfig.json
repo/pytest/: pytest.ini  pytest.toml
repo/ruff/: ruff.toml
repo/sops/: .sops.yaml
scripts/: local.sh  openclaw.sh  remote.sh  setup-proxmox.py
src/: app.py  backup-truenas  decrypt.py  encrypt.py  generate-deploy-key  generate-deploy-key.py  install-uv  main.py  purge-packages  reboot-proxmox  setup-authorized-keys  setup-infra.py  setup-venv  setup-vm  setup-vm-using-python.py  setup-vm.py  ssh-keys.txt
src/public/: __init__.py  config.toml  constants.py  enums.py  install.py  install2.py  installer_constants.py  installer_init.py  installer_utilities.py  lib.py  more_constants.py  public_config.toml  settings.py  storage.py  sync.sh  types.py  utilities.py
src/public/public/: install.py  types.py
src/tests/: test_install.py  test_settings.py  test_storage.py  test_utilities.py
tests/: test_basic.py  test_math.py
